diesel_compile_tests/tests/fail/derive/return_type_helper_errors.stderr
error: expected `=`
  --> tests/fail/derive/return_type_helper_errors.rs:16:5
   |
LL |     #[declare_sql_function(generate_return_type_helpers)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `declare_sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)
